--- a/BlazorWasmSyncStart/_Imports.razor
+++ b/BlazorWasmSyncStart/_Imports.razor
@@ -6,8 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using BlazorSyncfusionNavigation
-@using BlazorSyncfusionNavigation.Shared
+@using BlazorWasmSyncStart.Shared
 
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Navigations
