--- a/BlazorWasmSyncStart/Shared/NavigationMenu.razor
+++ b/BlazorWasmSyncStart/Shared/NavigationMenu.razor
@@ -18,13 +18,19 @@
                 </NavLink>
             </div>
             <hr />
+              <div class="nav-item px-3">
+                <NavLink class="nav-link" href="empty">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Empty
+                </NavLink>
+            </div>
+            <hr />
         </nav>
 
         <style>
             #nav{
-                margin-top:12px;
                 display:flex;
-                flex-direction:column
+                flex-direction:column;
+                overflow:auto;
             }
             hr{
                 width:80%;
