--- a/BlazorWasmSyncStart/Shared/NavigationMenu.razor
+++ b/BlazorWasmSyncStart/Shared/NavigationMenu.razor
@@ -2,25 +2,25 @@
             <hr />
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                    <span aria-hidden="true"></span> Home
                 </NavLink>
             </div>
             <hr />
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="counter" >
-                    <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                    <span aria-hidden="true"></span> Counter
                 </NavLink>
             </div>
             <hr />
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="fetchdata">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                    <span aria-hidden="true"></span>Fetch data
                 </NavLink>
             </div>
             <hr />
               <div class="nav-item px-3">
                 <NavLink class="nav-link" href="empty">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Empty
+                    <span aria-hidden="true"></span>Empty
                 </NavLink>
             </div>
             <hr />
