--- a/BlazorWasmSyncStart/Shared/NavigationMenu.razor
+++ b/BlazorWasmSyncStart/Shared/NavigationMenu.razor
@@ -2,7 +2,7 @@
             <hr />
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                    <span aria-hidden="true"></span> Home
+                    Home
                 </NavLink>
             </div>
             <hr />
@@ -31,6 +31,7 @@
                 display:flex;
                 flex-direction:column;
                 overflow:auto;
+                padding-left:20px;
             }
             hr{
                 width:80%;
@@ -40,6 +41,7 @@
             }
             .nav-link{
                 display:block;
+                padding:0;
                 color:white;
                 font-size:1.3em;
                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
