--- a/BlazorWasmSyncStart/Shared/NavigationMenu.razor
+++ b/BlazorWasmSyncStart/Shared/NavigationMenu.razor
@@ -1,6 +1,6 @@
 ﻿        <nav id="nav">
             <hr />
-            <div class="nav-item px-3">
+            <div class="px-3">
                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                     Home
                 </NavLink>
@@ -45,7 +45,7 @@
                 color:white;
                 font-size:1.3em;
                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                font-weight:100;
+                font-weight:300;
             }
             .nav-link:hover{
                 color:white;
