--- a/BlazorWasmSyncStart/Shared/SideBarLayout.razor
+++ b/BlazorWasmSyncStart/Shared/SideBarLayout.razor
@@ -7,7 +7,7 @@
         <ToolbarItem Text="Toogle" Align="ItemAlign.Left">
             <Template>
                 <ToolbarEvents Clicked="@Open"></ToolbarEvents>
-                <SfButton IconCss="oi oi-menu" IconPosition="IconPosition.Right">
+                <SfButton IconCss="oi oi-menu" IconP tion="IconPosition.Right">
                 </SfButton>
             </Template>
         </ToolbarItem>
@@ -102,8 +102,6 @@
     {
         base.OnAfterRender(firstRender);
         IsSidebarOpen = sidebarObj.IsOpen;
-
-
     }
 
     
