started animation implementation

--- a/BlazorWasmSyncStart/Pages/Index.razor
+++ b/BlazorWasmSyncStart/Pages/Index.razor
@@ -1,9 +1,10 @@
 ﻿@page "/"
+<Animate Animation="Animations.FadeIn" DurationMs="1000">
 
-<PageTitle>Index</PageTitle>
+    <PageTitle>Index</PageTitle>
 
-<h1 style="margin-top:80px">Hello, world!</h1>
+    <h1 style="margin-top:80px">Hello, world!</h1>
 
-Welcome to your new app.
+    Welcome to your new app.
 
-@*<SurveyPrompt Title="How is Blazor working for you?" />*@
+</Animate>
