--- a/BlazorWasmSyncStart/Pages/Counter.razor
+++ b/BlazorWasmSyncStart/Pages/Counter.razor
@@ -1,13 +1,14 @@
 ﻿@page "/counter"
 
 <PageTitle>Counter</PageTitle>
+<Animate Animation="Animations.FadeIn" DurationMs="1000">
 
-<h1>Counter</h1>
+    <h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+    <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-
+    <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+</Animate>
 @code {
     private int currentCount = 0;
 
