--- a/BlazorWasmSyncStart/Pages/FetchData.razor
+++ b/BlazorWasmSyncStart/Pages/FetchData.razor
@@ -2,6 +2,7 @@
 @inject HttpClient Http
 
 <PageTitle>Weather forecast</PageTitle>
+<Animate Animation="Animations.FadeIn" DurationMs="1000">
 
 <h1>Weather forecast</h1>
 
@@ -35,7 +36,7 @@ else
         </tbody>
     </table>
 }
-
+</Animate>
 @code {
     private WeatherForecast[]? forecasts;
 
