--- a/BlazorWasmSyncStart/Pages/Counter.razor
+++ b/BlazorWasmSyncStart/Pages/Counter.razor
@@ -3,7 +3,7 @@
 <PageTitle>Counter</PageTitle>
 <Animate Animation="Animations.FadeIn" DurationMs="1000">
 
-    <h1>Counter</h1>
+    <h1 style="margin-top:80px;">Counter</h1>
 
     <p role="status">Current count: @currentCount</p>
 
