--- a/BlazorWasmSyncStart/Pages/FetchData.razor
+++ b/BlazorWasmSyncStart/Pages/FetchData.razor
@@ -4,9 +4,10 @@
 <PageTitle>Weather forecast</PageTitle>
 <Animate Animation="Animations.FadeIn" DurationMs="1000">
 
-<h1>Weather forecast</h1>
+    <h1 style="margin-top:80px;">Weather forecast</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+    <p>This component demonstrates fetching data from the server.</p>
+</Animate>
 
 @if (forecasts == null)
 {
@@ -14,29 +15,30 @@
 }
 else
 {
+    <Animate Animation="Animations.FadeIn" DurationMs="1000">
     <table class="table" style="width:60%; margin:auto">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
+            <thead>
                 <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
+                    <th>Date</th>
+                    <th>Temp. (C)</th>
+                    <th>Temp. (F)</th>
+                    <th>Summary</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var forecast in forecasts)
+                {
+                        <tr>
+                            <td>@forecast.Date.ToShortDateString()</td>
+                            <td>@forecast.TemperatureC</td>
+                            <td>@forecast.TemperatureF</td>
+                            <td>@forecast.Summary</td>
+                        </tr>
+                }
+            </tbody>
+        </table>
+    </Animate>
 }
-</Animate>
 @code {
     private WeatherForecast[]? forecasts;
 
