--- a/BlazorWasmSyncStart/Shared/NavigationMenu.razor
+++ b/BlazorWasmSyncStart/Shared/NavigationMenu.razor
@@ -1,5 +1,7 @@
 ﻿        <nav id="nav">
             <hr />
+                        <Animate Animation="Animations.FadeRight" DurationMs="1000">
+
             <div class="px-3">
                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                     Home
@@ -24,6 +26,7 @@
                 </NavLink>
             </div>
             <hr />
+            </Animate>
         </nav>
 
         <style>
