--- a/BlazorWasmSyncStart/Shared/NavigationMenu.razor
+++ b/BlazorWasmSyncStart/Shared/NavigationMenu.razor
@@ -1,66 +1,71 @@
-﻿        <nav id="nav">
-            <hr />
-            <div class="px-3">
-            <Animate Animation="Animations.SlideRight" DurationMs="@duration">
-                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                    Home
-                </NavLink>
-                </Animate>
-            </div>
-            <hr />
+﻿<div>        
+<nav id="nav">
+        <hr />
+        <div class="px-3">
+        <Animate Animation="Animations.SlideRight" DurationMs="@duration" DelayMs="0">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                Home
+            </NavLink>
+            </Animate>
+        </div>
+        <hr />
+        <div class="nav-item px-3">
+        <Animate Animation="Animations.SlideRight" DurationMs="@duration" DelayMs="200">
+            <NavLink class="nav-link" href="counter" >
+                <span aria-hidden="true"></span> Counter
+            </NavLink>
+        </Animate>
+        </div>
+        <hr />
+        <div class="nav-item px-3">
+                <Animate Animation="Animations.SlideRight" DurationMs="@duration" DelayMs="400">
+            <NavLink class="nav-link" href="fetchdata">
+                <span aria-hidden="true"></span>Fetch data
+            </NavLink>
+        </Animate>
+        </div>
+        <hr />
             <div class="nav-item px-3">
-            <Animate Animation="Animations.SlideRight" DurationMs="@duration">
-                <NavLink class="nav-link" href="counter" >
-                    <span aria-hidden="true"></span> Counter
-                </NavLink>
-</Animate>
-            </div>
-            <hr />
-            <div class="nav-item px-3">
-                  <Animate Animation="Animations.SlideRight" DurationMs="@duration">
-                <NavLink class="nav-link" href="fetchdata">
-                    <span aria-hidden="true"></span>Fetch data
-                </NavLink>
-          </Animate>
-            </div>
-            <hr />
-              <div class="nav-item px-3">
-          <Animate Animation="Animations.SlideRight" DurationMs="@duration">
-                  <NavLink class="nav-link" href="empty">
-                    <span aria-hidden="true"></span>Empty
-                </NavLink>
-                </Animate>
-            </div>
-            <hr />
-        </nav>
-@code{
-    private int duration = 500;
-        }
+        <Animate Animation="Animations.SlideRight" DurationMs="@duration" DelayMs="600">
+                <NavLink class="nav-link" href="empty">
+                <span aria-hidden="true"></span>Empty
+            </NavLink>
+            </Animate>
+        </div>
+        <hr />
+    </nav>
+</div>
 
-        <style>
-            #nav{
-                display:flex;
-                flex-direction:column;
-                overflow:auto;
-                padding-left:20px;
-            }
-            hr{
-                width:80%;
-                background-color:wheat;
-                align-self:center;
+@code
+{
+private int duration = 500;
+}
+<style>
+    #nav{
+        display:flex;
+        flex-direction:column;
+        overflow:auto;
+        padding-left:20px;
+    }
+    hr{
+        width:80%;
+        background-color:antiquewhite;
+        align-self:center;
 
-            }
-            .nav-link{
-                display:block;
-                padding:0;
-                color:white;
-                font-size:1.3em;
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                font-weight:300;
-            }
-            .nav-link:hover{
-                color:white;
-                text-decoration:underline;
-            }
-        </style>
+    }
+    .nav-link{
+        display:block;
+        padding:0;
+        color:antiquewhite;
+        font-size:1.3em;
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight:300;
+    }
+    .nav-link:hover{
+        color:antiquewhite;
+        text-decoration:underline;
+    }
+          
+           
+</style>
 }
