--- a/BlazorWasmSyncStart/Shared/SideBarLayout.razor
+++ b/BlazorWasmSyncStart/Shared/SideBarLayout.razor
@@ -2,7 +2,7 @@
 @using Syncfusion.Blazor.Navigations
 @using Syncfusion.Blazor.Buttons
 
-<SfToolbar Height="52px">
+@*<SfToolbar Height="52px">
     <ToolbarItems>
         <ToolbarItem Text="Toogle" Align="ItemAlign.Left">
             <Template>
@@ -19,6 +19,11 @@
         <ToolbarItem Text=@($"IsDark = {IsThemeDark.ToString()}") Align="ItemAlign.Right"></ToolbarItem>
     </ToolbarItems>
 </SfToolbar>
+*@
+
+<div id="toolbar">
+    <button id="toolbar-menu-button" @onclick="@SideBarToggle"><span class="oi oi-menu"></span></button>
+</div>
 
 <SfSidebar @ref="@sidebarObj" Type="SidebarType.Over" @bind-IsOpen="IsSidebarOpen"
            EnablePersistence="false" CloseOnDocumentClick="false" ShowBackdrop="false"
@@ -45,6 +50,22 @@
     :root {
         --sidebar-width: 250px;
         --toolbar-height: 52px;
+    }
+    #toolbar{
+        display:flex;
+        background: crimson;
+        border: none;
+        color: white;
+        height:var(--toolbar-height);
+        width: 100vw;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, .25);
+    }
+    #toolbar-menu-button{
+        justify-self:center;
+        background:none; 
+        border:none;
+        color:white;
+        margin-left:8px;
     }
 
     .e-toolbar {
