--- a/BlazorWasmSyncStart/Shared/SideBarLayout.razor
+++ b/BlazorWasmSyncStart/Shared/SideBarLayout.razor
@@ -37,7 +37,7 @@
                 </SfButton>
 *@            </div>
                 <div style="display:flex; justify-content:center; align-content:center;">
-                    <img height="120" width="240" src="images/lights.jpg" />
+                    <img height="120" width="200" src="images/logo.jpg" />
                 </div>
             <NavigationMenu></NavigationMenu>
         </div>
