--- a/BlazorWasmSyncStart/Shared/SideBarLayout.razor
+++ b/BlazorWasmSyncStart/Shared/SideBarLayout.razor
@@ -41,7 +41,7 @@
     </ChildContent>
 </SfSidebar>
 
-<div style="text-align: center; width:auto; height:92vh">
+<div style="text-align: center; width:auto;">
     @Body
 </div>
 
@@ -89,7 +89,6 @@
     .e-btn, .e-css.e-btn {
         background-color: transparent;
     }
-
 
     .e-sidebar {
         /*        color: black;
