--- a/BlazorWasmSyncStart/Shared/SideBarLayout.razor
+++ b/BlazorWasmSyncStart/Shared/SideBarLayout.razor
@@ -145,4 +145,8 @@
         if (isDark) return "oi oi-moon";
         else return "oi oi-sun";
     }
+    private void SetTheme(string name)
+    {
+
+    }
 }
