--- a/BlazorWasmSyncStart/Pages/FetchData.razor
+++ b/BlazorWasmSyncStart/Pages/FetchData.razor
@@ -16,7 +16,7 @@
 else
 {
     <Animate Animation="Animations.FadeIn" DurationMs="1000">
-    <table class="table" style="width:60%; margin:auto">
+        <table class="table" style="width:60%; margin:auto; color:var(--bs-body-color)!important">
             <thead>
                 <tr>
                     <th>Date</th>
