--- a/BlazorWasmSyncStart/Shared/NavigationMenu.razor
+++ b/BlazorWasmSyncStart/Shared/NavigationMenu.razor
@@ -25,6 +25,15 @@
             </Animate>
         </div>
         <hr />
+        <div class="nav-item px-3">
+            <Animate Animation="Animations.SlideRight" DurationMs="@duration" DelayMs="400">
+                <NavLink class="nav-link" href="cards">
+                    <span aria-hidden="true"></span>Cards
+                </NavLink>
+            </Animate>
+        </div>
+        <hr />
+
     </nav>
 </div>
 
