--- a/BlazorWasmSyncStart/wwwroot/css/app.css
+++ b/BlazorWasmSyncStart/wwwroot/css/app.css
@@ -1,5 +1,9 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+html{
+    margin:0;
+    height:100%;
+}
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
