--- a/BlazorWasmSyncStart/Pages/Index.razor
+++ b/BlazorWasmSyncStart/Pages/Index.razor
@@ -1,10 +1,8 @@
 ﻿@page "/"
 <Animate Animation="Animations.FadeIn" DurationMs="1000">
-
     <PageTitle>Index</PageTitle>
-
-    <h1 style="margin-top:80px">Hello, world!</h1>
-
-    Welcome to your new app.
-
+    <div style="position:relative; top:80px;">
+        <h1>Hello, world!</h1>
+        Welcome to your new app.
+    </div>
 </Animate>
