--- a/BlazorWasmSyncStart/Pages/Counter.razor
+++ b/BlazorWasmSyncStart/Pages/Counter.razor
@@ -2,12 +2,11 @@
 
 <PageTitle>Counter</PageTitle>
 <Animate Animation="Animations.FadeIn" DurationMs="1000">
-
-    <h1 style="margin-top:80px;">Counter</h1>
-
-    <p role="status">Current count: @currentCount</p>
-
-    <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+    <div style="position:relative; top:80px;">
+        <h1>Counter</h1>
+        <p role="status">Current count: @currentCount</p>
+        <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+    </div>
 </Animate>
 @code {
     private int currentCount = 0;
